--- a/calculator.html
+++ b/calculator.html
@@ -239,6 +239,11 @@
         display(result);
         num1 = num2 = undefined;
       }
+
+      function clearAll() {
+        num1 = num2 = result = ope = undefined;
+        display(0);
+      }
     </script>
   </body>
 </html>
