--- a/calculator.html
+++ b/calculator.html
@@ -234,6 +234,8 @@
           result = num1 + num2;
         } else if (ope === "-") {
           result = num1 - num2;
+        } else if (ope === "*") {
+          result = num1 * num2;
         }
 
         display(result);
