--- a/calculator.html
+++ b/calculator.html
@@ -236,6 +236,8 @@
           result = num1 - num2;
         } else if (ope === "*") {
           result = num1 * num2;
+        } else if (ope === "/") {
+          result = num1 / num2;
         }
 
         display(result);
