--- a/calculator.html
+++ b/calculator.html
@@ -234,6 +234,7 @@
       }
 
       function calculate() {
+        let result = 0;
         let int1 = Number(num1);
         let int2 = Number(num2);
         if (ope === "+") {
