--- a/calculator.html
+++ b/calculator.html
@@ -25,11 +25,12 @@
 
       .ronw {
         width: 100%;
+        margin: 5%;
       }
 
       /* light theme */
       .calculator {
-        width: 13%;
+        width: 70%;
         margin: auto;
         padding: 20px;
         box-shadow: 0px 21px 24px 10px rgba(189, 12, 162, 0.2);
@@ -234,7 +235,6 @@
       }
 
       function calculate() {
-        let result = 0;
         let int1 = Number(num1);
         let int2 = Number(num2);
         if (ope === "+") {
