--- a/calculator.html
+++ b/calculator.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Deborah Lacerda" />
     <meta name="email" content="lace0115@algonquinlive.com" />
 
@@ -47,6 +45,7 @@
         padding-top: 10px;
         text-align: right;
         margin-right: 6px;
+        height: 24.5pt;
         font-size: 21.5pt;
         overflow-x: auto;
         transition: all 0.2s ease-in-out;
@@ -97,7 +96,7 @@
       /* dark theme */
       .dark-mode .calculator {
         box-shadow: 0px 21px 24px 0px #006466;
-        background-color: #212f45;
+        background-color: #3c567e;
       }
 
       .dark-mode .display {
